@@ -1535,17 +1535,6 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-name|statusMessages
-operator|.
-name|remove
-argument_list|(
-name|DataImporter
-operator|.
-name|MSG
-operator|.
-name|TOTAL_DOC_PROCESSED
-argument_list|)
-expr_stmt|;
 block|}
 if|if
 condition|(
